[package]
name = "wallet_speed_test"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.6.2"
futures = "0.1.24"
indy = "1.11.0"
rand = "0.5.5"
serde_json = "1.0.40"
serde_derive = "1.0.97"
serde = "1.0.97"
